--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f1f1f1;
+    background-color: dimgray;
 }
 
 .container {
@@ -45,6 +45,7 @@ input[type=submit] {
     font-size: 16px;
     font-style: initial;
     border: 1px solid #ccc;
+    margin-top: 15px;
 }
 
 input[type=submit]:hover {
