--- a/vscode/stylehome.css
+++ b/vscode/stylehome.css
@@ -14,6 +14,7 @@ body {
 }
 
 header {
+	height: 130px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -23,12 +24,17 @@ header {
 }
 
 .logo {
-	font-size: 30px;
-	font-weight: bold;
+	width: 300px;
+    height: 160px;
+    margin-left: 15px;
+    display: flex;
+    margin-top: 1.5px;
+	flex-shrink: 0;
 }
 
 nav ul {
 	display: flex;
+	margin-right: 15px;
 }
 
 nav li {
@@ -78,7 +84,7 @@ main {
 	margin: 10px;
 	padding: 20px;
 	background-color: #fff;
-	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 2px 2px rgba(0.5, 0, 0, 0.5);
 }
 
 .horarios h3 {
