--- a/vscode/stylecadastro.css
+++ b/vscode/stylecadastro.css
@@ -18,13 +18,22 @@ section {
 .form-box {
     position: relative;
     width: 400px;
-    height: 450px;
+    height: 490px;
     border: 2px solid rgba(255,255,255,0.5);
     border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #FFFFFF;
+}
+
+.form-box img {
+    position: absolute;
+    bottom: -27px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100px;
+    height: 100px;
 }
 
 h2 {
