--- a/vscode/stylehome.css
+++ b/vscode/stylehome.css
@@ -119,6 +119,53 @@ main {
 	background-color: #d35400;
 }
 
+h2 {
+	text-align:center;
+}
+
+/* Estilização da tabela de usuários */
+.users-table {
+	width: 100%;
+	margin-top: 20px;
+	border-collapse: collapse;
+	margin: 40px auto;
+	max-width: 930px;
+	padding: 0 20px;
+  }
+  
+  .users-table th,
+  .users-table td {
+	padding: 10px;
+	text-align: center;
+	border: 1px solid #ccc;
+  }
+  
+  .users-table th {
+	background-color: #e67e22;
+  }
+  
+  .users-table tr:nth-child(even) {
+	background-color: #f9f9f9;
+  }
+  
+  .users-table tr:hover {
+	background-color: #e6e6e6;
+  }
+  
+  /* Estilos de fonte e cor a serem ajustados para combinar com o restante do site */
+  .users-table th {
+	font-size: 16px;
+	font-weight: bold;
+	color: #333;
+	font-family: Arial, sans-serif;
+  }
+  
+  .users-table td {
+	font-size: 14px;
+	color: #555;
+	font-family: Arial, sans-serif;
+  }
+
 footer {
 	background-color: #e67e22;
     color: #fff;
